# afterglowpy

./: .clang-format  .gitignore  README.md  dummy.py  jetmodule.cpp  lc.npz  pyproject.toml.old  setup.cfg  setup.py
afterglowpy/: __init__.py  cocoon.py  detail.py  flux.py  jetmodule.c  offaxis_struct.h  offaxis_struct_funcs.c  version.py
docs/source/: quickstart.rst
examples/: plotLightCurve.py  plotMultibandLightCurve.py  plotMultibandLightCurveBatch.py  plotSpectrum.py  plotSphericalLC.py  plotgammashock.py  plotringvsjet.py  plotringwobs.py
include/: integrate.hpp  interval.hpp  interval.tpp  offaxis_struct.hpp  shockEvolution.hpp
src/: afterglow_ext.cpp  afterglow_ext.pyx  dummy.cpp  dummy.pyx  flux.py  jet_ext.cpp  jet_ext.pyx  shock_ext.cpp  shock_ext.pyx
src/jet/: integrate.cpp  interval.cpp  jetmodule.cpp  offaxis_struct_funcs.cpp
src/physics/: integrate.cpp  interval.cpp  offaxis_struct.cpp  offaxis_struct_funcs.cpp  shockEvolution.cpp
src/shock/: shockEvolution.cpp
